<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".welcome">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@+id/loginText"
            android:textSize="30sp"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/purple"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/AppointmentsButton"
            android:text="@string/appointments"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/MedicalRecordsButton"
            android:text="@string/medical_records"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:id="@+id/HealthTopicsButton"
            android:text="@string/health_topics"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/purple"
            app:cornerRadius = "20dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/HomeButton"
            android:text="@string/home"
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            app:cornerRadius = "20dp"/>



    </LinearLayout>



</LinearLayout>